<resources><string name="ApplicationName">DayMax</string><string name="tab1">Рух коштів</string><string name="tab2">Доходи</string><string name="tab3">Витрати</string><string name="Financial_status">Фінансовий статус</string><string name="Capital">Капітал       </string><string name="Home">Головна</string><string name="CashFlow">Рух коштів</string><string name="Loans">Позики</string><string name="Assets">Активи</string><string name="Business">Бізнес</string><string name="Investment">Інвестиції</string><string name="Bills">Рахунки</string><string name="UserName">Ім\'я користувача</string><string name="History">Історія</string><string name="Earnings">Доходи</string><string name="Expenses">Видатки</string><string name="Transfers">Трансфери</string><string name="Price">Ціна</string><string name="Date">Дата</string><string name="Insert_Earnings">Добавити дохід</string><string name="Insert_Expense">Добавити витрату</string><string name="Insert_Transfer">Добавити трансфер</string><string name="Category">Категорія</string><string name="Purse">Рахунок</string><string name="Type_Category">Тип категорії</string><string name="Description">Коментар</string><string name="Status">Статус</string><string name="Name">Назва</string><string name="Give_Loan">Дати позику</string><string name="Take_Loan">Взяти позику</string><string name="Creditor">Позичальник</string><string name="Summ">Сума</string><string name="Summ_Return">Сума повернення</string><string name="Date_Return">Дата повернення</string><string name="Percent">Процент</string><string name="Remaining_Summ">Залишок боргу</string><string name="Remaining">Залишилось</string><string name="Date_Start">Дата покупки</string><string name="Current_Price">Поточна вартість/Вартість продажу</string><string name="Sell_Date">Дата продажу</string><string name="Gain_On_Sale">Прибуток від продажу</string><string name="Pag">Прив\'язка</string><string name="Add_Asset">Добавити актив</string><string name="Balance">Баланс</string><string name="Add_Purse">Створити рахунок</string><string name="Base_Currency">Основна валюта</string><string name="Withdraw">Зняти з рахунку</string><string name="Add">Добавити</string><string name="Date_Give">Дата надання</string><string name="Summ_Loan">Сума позики</string><string name="Loading">Завантаження</string><string name="From_Purse">З рахунку</string><string name="To_Purse">На рахунок</string><string name="Conragent">Конрагент</string><string name="Date_Write">Дата запису</string><string name="Without_Comission">Без комісії</string><string name="Summ_Sent_Resent">Суми відправки/отримання відрізняються</string><string name="Add_Comission">Додати комісію</string><string name="Currency">Валюта</string><string name="Percents">Відсотки</string><string name="Borrow_More">Дозичити кошти</string><string name="Return_Money">Повернути кошти</string><string name="All">Усі</string><string name="Debitors">Дебітори</string><string name="Creditors">Кредитори</string><string name="Create_Purse">Створити рахунок</string><string name="Sell_Asset">Продати актив</string><string name="Reg_Payment">Зареєструвати платіж</string><string name="Change_Cost">Зміна вартості активів</string><string name="Passive_Profit">Пасивний прибуток</string><string name="OK">OK</string><string name="Cancel">Скасувати</string><string name="Error">Помилка, спробуйте ще!</string><string name="Success">Успішно</string><string name="Delete">Видалити</string><string name="CommissionToAccount">Комісія до рахунку</string><string name="Discontinued">Знято</string><string name="Accepted">Зараховано</string><string name="Commission">Комісія</string><string name="Transfer_From">Трансфер з</string><string name="Transfer_To">Трансфер на</string><string name="Default">По замовчуванню</string><string name="Earnings_Purse">Надходження</string><string name="Expences_Purse">Виведення</string><string name="House_Name">Назва будинку</string><string name="Year_Percent">Річний відсоток</string><string name="Count_Month">Кількість місяців</string><string name="Pay_Credit_Mounth">Оплачувати кредит щомісяця до числа</string><string name="Month_Comission">Щомісячна комісія</string><string name="Payment_Type">Тип оплати</string><string name="Start_Date">Дата початку</string><string name="Anuitentic">Ануітетний</string><string name="Difference">Диференційований</string><string name="Name_Bank">Назва банку</string><string name="Transfer_Money">Перерахувати кошти</string><string name="Percent_Type">Тип відсотка</string><string name="Percent_Interval">Інтервал відсотка</string><string name="Simple">Простий</string><string name="Complex">Комплексний</string><string name="Every_Day">Щоденно</string><string name="Every_Month">Щомісячно</string><string name="Per_Qartal">Раз в 3 місяці</string><string name="Twice_Year">Двічі на рік</string><string name="Every_Year">Щорічно</string><string name="At_the_End">По зацінченню періоду</string><string name="Institution">Установа</string><string name="Direction">Напрямок</string><string name="Card_Number">Номер картки</string><string name="Credit_Limit">Кредитний ліміт</string><string name="Year_Percent">Річний відсоток за протермінування</string><string name="Percent_Calculate_Every">Відсоток нараховується кожні</string><string name="Percent_Calculate">Відсоток нараховується</string><string name="This_Month">Поточного місяця</string><string name="Next_Month">Наступного місяця</string><string name="Add_Business">Відкрити бізнес</string><string name="Start">Початок</string><string name="Time">Час</string><string name="Ear">Прихід</string><string name="Pryb">Прибуток</string><string name="Exp">Розхід</string><string name="Vnes">Внески</string><string name="Vuv">Виведення</string><string name="Earning">Дохід</string><string name="Summ_Spys">Сума списання</string><string name="Active">Активи/ТМЦ</string><string name="Vkladennya">Вкладення</string><string name="January">Січень</string><string name="February">Лютий</string><string name="March">Березень</string><string name="April">Квітень</string><string name="May">Травень</string><string name="June">Червень</string><string name="July">Липень</string><string name="August">Серпень</string><string name="September">Вересень</string><string name="October">Жовтень</string><string name="November">Листопад</string><string name="December">Грудень</string><string name="InvestSettings">Параметри інвестиції</string><string name="HourEarning">Погодинний прибуток</string><string name="DayEarning">Щоденний прибуток</string><string name="MonthEarning">Щомісячний прибуток</string><string name="PriceOkup">Оцінка окупності</string><string name="TimeOkup">Термін окупності</string><string name="DateOkup">Дата окупності</string><string name="TempOkup">Темп окупності</string><string name="Days">днів</string><string name="GiveEarning">Внести дохід</string><string name="GiveExpense">Внести видатки</string><string name="EditBalance">Редагувати баланс</string><string name="Transfer">Трансфер</string><string name="ImportData">Імпортувати дані</string><string name="ExportData">Експортувати дані</string><string name="EndInvest">Закрити інвестицію</string><string name="Settings">Налаштування</string></resources>