<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:descendantFocusability="beforeDescendants" android:focusableInTouchMode="true" android:id="@+id/FlyOutContent" android:background="@color/BG" xmlns:android="http://schemas.android.com/apk/res/android"><include layout="@layout/topwithoutmenu" /><ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"><LinearLayout android:orientation="vertical" android:layout_marginTop="10dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp" android:background="@drawable/background_with_shadow" android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/assetsaddviewitemslayout"><TextView android:text="@string/Category" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:padding="10dp" android:layout_height="wrap_content" android:id="@+id/textView4" /><Spinner android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="10dp" android:background="@drawable/rounded_edittext" android:id="@+id/sCategory" /><TextView android:text="@string/Name" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:padding="10dp" android:layout_height="wrap_content" android:id="@+id/textView4" /><EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="10dp" android:background="@drawable/rounded_edittext" android:id="@+id/tAssetName" /><TextView android:text="@string/Date_Start" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:padding="10dp" android:layout_height="wrap_content" android:id="@+id/textView4" /><EditText android:inputType="date" android:padding="10dp" android:layout_width="match_parent" android:background="@drawable/rounded_edittext" android:focusable="false" android:layout_height="wrap_content" android:id="@+id/tDate" /><TextView android:text="@string/Price" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:padding="10dp" android:textColor="@color/TextColor" android:layout_height="wrap_content" android:id="@+id/textView6" /><EditText android:inputType="numberDecimal" android:padding="10dp" android:layout_width="match_parent" android:background="@drawable/rounded_edittext" android:layout_height="wrap_content" android:id="@+id/tPrice" /><LinearLayout android:orientation="vertical" android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linpurse"><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:padding="10dp" android:layout_height="wrap_content" android:id="@+id/Linqq"><CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/tChecked" /><TextView android:text="@string/Withdraw" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="@color/TextColor" android:id="@+id/textView3141" /></LinearLayout><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/ShowPurse"><TextView android:text="@string/Purse" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:padding="10dp" android:textColor="@color/TextColor" android:layout_height="wrap_content" android:id="@+id/textView3" /><EditText android:layout_width="fill_parent" android:layout_height="wrap_content" android:padding="10dp" android:focusable="false" android:background="@drawable/rounded_edittext" android:id="@+id/sPurse" /></LinearLayout></LinearLayout><TextView android:text="@string/Base_Currency" android:padding="10dp" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:layout_height="wrap_content" android:textColor="@color/TextColor" android:id="@+id/textView2" /><Spinner android:layout_width="match_parent" android:background="@drawable/rounded_edittext" android:padding="10dp" android:layout_height="wrap_content" android:id="@+id/tCurrency" /><TextView android:text="@string/Description" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="match_parent" android:textColor="@color/TextColor" android:layout_height="wrap_content" android:padding="10dp" android:id="@+id/textView7" /><EditText android:inputType="textMultiLine" android:padding="10dp" android:layout_width="match_parent" android:background="@drawable/rounded_edittext" android:layout_height="144.0dp" android:id="@+id/tDescription" android:gravity="top" /><Button android:text="@string/OK" android:layout_marginTop="10dp" android:background="@drawable/rounded_button" android:layout_marginBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnOK" /><Button android:text="@string/Cancel" android:layout_marginTop="10dp" android:background="@drawable/rounded_button" android:layout_marginBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnCancel" /></LinearLayout></ScrollView></LinearLayout>