<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/FlyOutContent" android:background="@color/BG" xmlns:android="http://schemas.android.com/apk/res/android"><include layout="@layout/topwithoutmenu" /><ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"><LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"><LinearLayout android:layout_marginTop="10dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp" android:orientation="vertical" android:background="@drawable/background_with_shadow" android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout11"><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3"><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout5" /><TextView android:text="@string/Creditor" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="148.0dp" android:textColor="@color/TextColor" android:layout_height="wrap_content" android:id="@+id/textView2" /><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/linearLayout4" /><TextView android:text="Large Text" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/TextColor" android:id="@+id/tCreditor" android:layout_width="wrap_content" android:layout_height="wrap_content" /></LinearLayout><View android:layout_width="fill_parent" android:layout_height="1dp" android:id="@+id/view2" android:background="#abe4e4e4" android:layout_gravity="center" android:layout_marginLeft="8dp" android:layout_marginRight="14dp" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3"><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout6" /><TextView android:text="@string/Date" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="148.0dp" android:layout_height="wrap_content" android:textColor="@color/TextColor" android:id="@+id/textView2" /><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout4" /><TextView android:text="Large Text" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/tDate" android:textColor="@color/TextColor" android:layout_width="wrap_content" android:layout_height="wrap_content" /></LinearLayout><View android:layout_width="fill_parent" android:layout_height="1dp" android:id="@+id/view2" android:background="#abe4e4e4" android:layout_gravity="center" android:layout_marginLeft="8dp" android:layout_marginRight="14dp" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3"><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout7" /><TextView android:text="@string/Summ" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="148.0dp" android:textColor="@color/TextColor" android:layout_height="wrap_content" android:id="@+id/textView2" /><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout4" /><TextView android:text="Large Text" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/TextColor" android:id="@+id/tSumm" android:layout_width="wrap_content" android:layout_height="wrap_content" /></LinearLayout><View android:layout_width="fill_parent" android:layout_height="1dp" android:id="@+id/view2" android:background="#abe4e4e4" android:layout_gravity="center" android:layout_marginLeft="8dp" android:layout_marginRight="14dp" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3"><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout8" /><TextView android:text="@string/Summ_Return" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="148.0dp" android:textColor="@color/TextColor" android:layout_height="wrap_content" android:id="@+id/textView2" /><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout4" /><TextView android:text="Large Text" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/TextColor" android:id="@+id/tSumm_return" android:layout_width="wrap_content" android:layout_height="wrap_content" /></LinearLayout><View android:layout_width="fill_parent" android:layout_height="1dp" android:id="@+id/view2" android:background="#abe4e4e4" android:layout_gravity="center" android:layout_marginLeft="8dp" android:layout_marginRight="14dp" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3"><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout9" /><TextView android:text="@string/Date_Return" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="148.0dp" android:textColor="@color/TextColor" android:layout_height="wrap_content" android:id="@+id/textView2" /><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout4" /><TextView android:text="Large Text" android:textColor="@color/TextColor" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/tDate_return" android:layout_width="wrap_content" android:layout_height="wrap_content" /></LinearLayout><View android:layout_width="fill_parent" android:layout_height="1dp" android:id="@+id/view2" android:background="#abe4e4e4" android:layout_gravity="center" android:layout_marginLeft="8dp" android:layout_marginRight="14dp" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3"><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout10" /><TextView android:text="@string/Percent" android:textColor="@color/TextColor" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="148.0dp" android:layout_height="wrap_content" android:id="@+id/textView2" /><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout4" /><TextView android:text="Large Text" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/tPercent" android:textColor="@color/TextColor" android:layout_width="wrap_content" android:layout_height="wrap_content" /></LinearLayout><View android:layout_width="fill_parent" android:layout_height="1dp" android:id="@+id/view2" android:background="#abe4e4e4" android:layout_gravity="center" android:layout_marginLeft="8dp" android:layout_marginRight="14dp" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3"><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout10" /><TextView android:text="@string/Remaining_Summ" android:textColor="@color/TextColor" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="148.0dp" android:layout_height="wrap_content" android:id="@+id/textView2" /><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout4" /><TextView android:text="Large Text" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/tRemaining_summ" android:textColor="@color/TextColor" android:layout_width="wrap_content" android:layout_height="wrap_content" /></LinearLayout><View android:layout_width="fill_parent" android:layout_height="1dp" android:id="@+id/view2" android:background="#abe4e4e4" android:layout_gravity="center" android:layout_marginLeft="8dp" android:layout_marginRight="14dp" /><LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/linearLayout3"><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout10" /><TextView android:text="@string/Remaining" android:textColor="@color/TextColor" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="148.0dp" android:layout_height="wrap_content" android:id="@+id/textView2" /><LinearLayout android:orientation="horizontal" android:minWidth="25px" android:minHeight="25px" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/linearLayout4" /><TextView android:text="Large Text" android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/tRemaining" android:textColor="@color/TextColor" android:layout_width="wrap_content" android:layout_height="wrap_content" /></LinearLayout></LinearLayout><TextView android:text="@string/History" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center" android:textColor="@color/TextColor" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView3" /><ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/loanshistoryscroll"><LinearLayout android:layout_marginTop="10dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp" android:orientation="vertical" android:background="@drawable/background_with_shadow" android:minWidth="25px" android:minHeight="25px" android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/loanshistorylayout" /></ScrollView></LinearLayout></ScrollView></LinearLayout>